--- a/templates/katzen/order/_list_orders.html.twig
+++ b/templates/katzen/order/_list_orders.html.twig
@@ -3,6 +3,7 @@
   <div class="row g-2">
     <div class="card-body">
       <a href="{{ path('order_create_form') }}" class="btn btn-sm btn-outline-primary">Add Order</a>
+      <a href="{{ path('order_stock_check') }}" class="btn btn-sm btn-outline-primary">Check Stock</a>      
     </div>
   </div>
   <div class="row g-4">
