TableView implementation for Menu > View Past Menus and Stock > Manage Items

--- a/templates/katzen/base.html.twig
+++ b/templates/katzen/base.html.twig
@@ -55,7 +55,7 @@
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                           <li><a href="{{ path('katzen_admin') }}" class="nav-link ps-4 {{ activeItem == 'item-create' ? 'active' : 'text-secondary' }}" data-item="item-create">Add An Item</a></li>
                           <li><a href="{{ path('stock_index') }}" class="nav-link ps-4 {{ activeItem == 'stock' ? 'active' : 'text-secondary' }}" data-item="stock-list">Current Stock</a></li>                          
-                          <li><a href="{{ path('item_index') }}" class="nav-link ps-4 {{ activeItem == 'items' ? 'active' : 'text-secondary' }}" data-item="item-list">Manage Items</a></li>
+                          <li><a href="{{ path('stock_table') }}" class="nav-link ps-4 {{ activeItem == 'items' ? 'active' : 'text-secondary' }}" data-item="item-list">Manage Items</a></li>
                         </ul>
                     </div>
                 </li>
@@ -305,6 +305,7 @@
     </script>
     {% block javascripts %}
     {{ encore_entry_script_tags('app') }}
+    {{ encore_entry_script_tags('table-view') }}
     {% endblock %}    
 </body>
 </html>
