--- a/templates/katzen/stock/_list_stock.html.twig
+++ b/templates/katzen/stock/_list_stock.html.twig
@@ -50,7 +50,7 @@
             {% endif %}
           </div>
           <div class="card-footer text-end">
-            <a href="{{ path('stock_target_show', { id: target.id }) }}" class="btn btn-sm btn-outline-primary">View</a>
+            <a href="{{ path('stock_target_view', { id: target.id }) }}" class="btn btn-sm btn-outline-primary">View</a>
             <a href="{{ path('stock_target_adjust', { id: target.id }) }}" class="btn btn-sm btn-outline-secondary">Adjust</a>
           </div>
         </div>
