--- a/templates/katzen/recipe/index.html.twig
+++ b/templates/katzen/recipe/index.html.twig
@@ -126,11 +126,11 @@
     <section class="dashboard-section">
       <h3>Recipe Building</h3>
       <ul class="dashboard-links">
-        <li><a href="{{ path('recipe_list') }}">View Recipe Catalog</a></li>
+        <li><a href="{{ path('recipe_table') }}">View Recipe Catalog</a></li>
         <li><a href="{{ path('recipe_build') }}">Build Manual Recipe</a></li>
         <li><a href="{{ path('recipe_build') }}">Smart Recipe Builder</a></li>
         <li><a href="{{ path('recipe_import') }}">Duplicate Recipe</a></li>
-        <li><a href="{{ path('recipe_list') }}">Archive Recipes</a></li>
+        <li><a href="{{ path('recipe_table') }}">Archive Recipes</a></li>
       </ul>
     </section>
 
