--- a/templates/katzen/component/panel_view.html.twig
+++ b/templates/katzen/component/panel_view.html.twig
@@ -1,4 +1,4 @@
-{% extends 'katzen/base.html.twig' %}
+{% extends activeDash ? activeDash : 'katzen/base.html.twig' %}
 {% block main_content %}
     {% include 'katzen/component/_panel_view.html.twig' %}
 {% endblock %}
