--- a/templates/katzen/manager/dashboard.html.twig
+++ b/templates/katzen/manager/dashboard.html.twig
@@ -1,4 +1,4 @@
-{% extends 'katzen/base.html.twig' %}
+{% extends activeDash ?? 'katzen/base.html.twig' %}
 {% block main_content %}
   {% include 'katzen/manager/widgets.html.twig' %}
 {% endblock %}
