--- a/templates/katzen/purchase/_show_purchase.html.twig
+++ b/templates/katzen/purchase/_show_purchase.html.twig
@@ -30,7 +30,7 @@
           <a href="{{ path('purchase_edit', {'id': purchase.id}) }}" class="btn btn-sm btn-outline-primary">
             <i class="bi bi-pencil"></i> Edit
           </a>
-          <a href="{{ path('purchase_index', {'id': purchase.id}) }}" class="btn btn-sm btn-outline-success">
+          <a href="{{ path('receipt_from_po', {'po_id': purchase.id}) }}" class="btn btn-sm btn-outline-success">
             <i class="bi bi-box-arrow-in-down"></i> Receive
           </a>
           <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.print()">
@@ -233,7 +233,7 @@
       
       <div class="btn-group" role="group">
         {% if purchase.status != 'cancelled' and purchase.status != 'received' %}
-          <a href="{{ path('purchase_index', {'id': purchase.id}) }}" class="btn btn-success">
+          <a href="{{ path('receipt_from_po', {'po_id': purchase.id}) }}" class="btn btn-success">
             <i class="bi bi-box-arrow-in-down me-1"></i>Receive Items
           </a>
         {% endif %}
