--- a/templates/katzen/component/table_view.html.twig
+++ b/templates/katzen/component/table_view.html.twig
@@ -1,4 +1,4 @@
-{% extends activeDash ?? 'katzen/base.html.twig' %}
+{% extends 'katzen/_dashboard_base.html.twig' %}
 {% block main_content %}
     {% include 'katzen/component/_table_view.html.twig' %}
 {% endblock %}
