--- a/templates/katzen/order/_list_orders.html.twig
+++ b/templates/katzen/order/_list_orders.html.twig
@@ -2,7 +2,7 @@
   <h2 class="mb-4">Open Orders</h2>
   <div class="row g-2">
     <div class="card-body">
-      <a href="{{ path('order_create_form') }}" class="btn btn-sm btn-outline-primary">Add Order</a>
+      <a href="{{ path('order_create') }}" class="btn btn-sm btn-outline-primary">Add Order</a>
       <a href="{{ path('order_stock_check') }}" class="btn btn-sm btn-outline-primary">Check Stock</a>      
     </div>
   </div>
