--- a/templates/katzen/dash-supply.html.twig
+++ b/templates/katzen/dash-supply.html.twig
@@ -19,7 +19,7 @@
         <nav class="flex-grow-1 px-3 py-2">
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a href="{{ path('dashboard_home') }}" class="nav-link {{ activeItem == 'dashboard' ? 'active' : 'text-secondary' }}" data-item="dashboard">
+                    <a href="{{ path('service_dashboard') }}" class="nav-link {{ activeItem == 'dashboard' ? 'active' : 'text-secondary' }}" data-item="dashboard">
                         <i class="bi bi-columns-gap me-2"></i>Dashboard
                     </a>
                 </li>
