--- a/templates/katzen/invoice/create_invoice.html.twig
+++ b/templates/katzen/invoice/create_invoice.html.twig
@@ -1,4 +1,4 @@
-{% extends 'katzen/dash-admin.html.twig' %}
+{% extends activeDash ?? 'katzen/_dashboard_base.html.twig' %}
 {% block main_content %}
     {% include 'katzen/invoice/_create_invoice.html.twig' %}
 {% endblock %}
