--- a/templates/katzen/menu/dashboard.html.twig
+++ b/templates/katzen/menu/dashboard.html.twig
@@ -1,4 +1,4 @@
 {% extends activeDash ?? 'katzen/_dashboard_base.html.twig' %}
 {% block main_content %}
-    {% include 'katzen/order/_list_orders.html.twig' %}
+  {% include 'katzen/menu/widgets.html.twig' %}
 {% endblock %}
