--- a/templates/katzen/order/create_order.html.twig
+++ b/templates/katzen/order/create_order.html.twig
@@ -1,4 +1,4 @@
-{% extends 'katzen/base.html.twig' %}
+{% extends activeDash ?? 'katzen/_dashboard_base.html.twig' %}
 {% block main_content %}
     {% include 'katzen/order/_create_order.html.twig' %}
 {% endblock %}
