MQ health widget

--- a/templates/katzen/widgets/dashboard.html.twig
+++ b/templates/katzen/widgets/dashboard.html.twig
@@ -1,4 +1,4 @@
 {% extends activeDash ?? 'katzen/_dashboard_base.html.twig' %}
 {% block main_content %}
-  {% include 'katzen/menu/widgets.html.twig' %}
+  {% include 'katzen/widgets/widgets.html.twig' %}
 {% endblock %}
